--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -50,9 +50,8 @@
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
